--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Lab12rakitova</title>
-  </head>
-  <body>
-    <div id="app">
-      <h1>Список студентов</h1>
-    <p>Введите имя и фамилию, чтобы добавить студента в список</p>
-          <form action="">
-            <h2>Форма</h2>
+</head>
+<body>
+<div id="app">
+    <h1>Список студентов</h1>
+    <p>Чтобы добавить студента в список, введите имя и фамилию студента</p>
+    <div class="form">
+        <form action="">
+            <h3>Форма</h3>
             <div class="form_item">
                 <label for="name">Имя</label>
-                <input type="text" size="30" id="name" v-model="name">
+                <input type="text" id="name" v-model="name">
             </div>
             <div class="form_item">
                 <label for="surname">Фамилия</label>
-                <input type="text" size="30" id="surname" v-model="surname">
+                <input type="text" id="surname" v-model="surname">
             </div>
-
         </form>
     </div>
     <p class="counter">
@@ -47,8 +47,8 @@
         data: {
             studentList: [],
             counter: 0,
-            name: "",
-            surname: ""
+            name: "Ракитова",
+            surname: "Екатерина"
         },
         methods: {
             addStudent() {
